# tinyx-wscons

./: configure.ac
dix/: colormap.c
include/: misc.h  servermd.h
kdrive/: Makefile.am
kdrive/src/: kinput.c
kdrive/wscons/: Makefile.am  apple_cmap.h  keyboard.c  mouse.c  wsconsinit.c  wsdev.h  wsfb.c  wskeymap.h
mi/: micmap.c
os/: utils.c
